--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,11 @@
       "CyberSpectrum\\PharPiler\\Tests\\": "tests"
     }
   },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0.x-dev"
+    }
+  },
   "bin": ["bin/pharpiler"],
   "minimum-stability": "dev",
   "prefer-stable": true
