--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,12 @@
   "require": {
     "php": ">=5.5",
     "psr/log": "~1.0",
-    "symfony/config": "~2.7",
-    "symfony/console": "~2.7",
-    "symfony/finder": "~2.8@dev",
-    "symfony/dependency-injection": "~2.7",
-    "symfony/process": "~2.7",
-    "symfony/yaml": "~2.7"
+    "symfony/config": "~2.7 | ~3.0",
+    "symfony/console": "~2.7 | ~3.0",
+    "symfony/finder": "~2.8 | ~3.0",
+    "symfony/dependency-injection": "~2.7 | ~3.0",
+    "symfony/process": "~2.7 | ~3.0",
+    "symfony/yaml": "~2.7 | ~3.0"
   },
   "require-dev": {
     "phpcq/all-tasks": "~1.1"
