--- a/.pharpiler.yml
+++ b/.pharpiler.yml
@@ -44,9 +44,9 @@ rewrites:
       - %package:cyberspectrum/pharpiler%/bin/pharpiler
     filter:
       - type: replace
-        @@MIN_PHP_VERSION@@: "5.5"
+        "@@MIN_PHP_VERSION@@": "5.5"
       - type: replace
-        @@PHARPILER_VERSION@@: %version:cyberspectrum/pharpiler%
+        "@@PHARPILER_VERSION@@": %version:cyberspectrum/pharpiler%
       - type: warning-time
         search: // @@DEV_WARNING_TIME@@
         format: define('DEV_WARNING_TIME', @@warning_time@@);
