--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,5 @@
       "dev-master": "1.0.x-dev"
     }
   },
-  "bin": ["bin/pharpiler"],
-  "minimum-stability": "dev",
-  "prefer-stable": true
+  "bin": ["bin/pharpiler"]
 }
