--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: php
 
 php:
-  - "5.5"
-  - "5.6"
-  - "7.0"
+  - "7.2"
   - "7.1"
+  - "7.0"
+  - "5.6"
   - "nightly"
 
 sudo: false
@@ -27,4 +27,4 @@ cache:
 
 matrix:
   allow_failures:
-    php: "nightly"
+    - php: "nightly"
