--- a/.pharpiler.yml
+++ b/.pharpiler.yml
@@ -33,20 +33,20 @@ tasks:
           - "(ParameterBag\/)"
 
   - type: set-stub
-    stub_file: %package:cyberspectrum/pharpiler%/phar/stub.php
+    stub_file: '%package:cyberspectrum/pharpiler%/phar/stub.php'
 
   - type: composer-autoload
     optimize: true
 
 rewrites:
   - files:
-      - %package:cyberspectrum/pharpiler%/phar/stub.php
-      - %package:cyberspectrum/pharpiler%/bin/pharpiler
+      - '%package:cyberspectrum/pharpiler%/phar/stub.php'
+      - '%package:cyberspectrum/pharpiler%/bin/pharpiler'
     filter:
       - type: replace
         "@@MIN_PHP_VERSION@@": "5.5"
       - type: replace
-        "@@PHARPILER_VERSION@@": %version:cyberspectrum/pharpiler%
+        "@@PHARPILER_VERSION@@": '%version:cyberspectrum/pharpiler%'
       - type: warning-time
         search: // @@DEV_WARNING_TIME@@
         format: define('DEV_WARNING_TIME', @@warning_time@@);
@@ -54,7 +54,7 @@ rewrites:
         ahead: 2592000
 
   - files:
-      - %package:cyberspectrum/pharpiler%/bin/pharpiler
+      - '%package:cyberspectrum/pharpiler%/bin/pharpiler'
     filter:
       - type: replace
         "#!/usr/bin/env php\n": ""
