--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,15 @@
   "type": "project",
   "license": "MIT",
   "require": {
-    "php": "^5.6 | ^7.0",
-    "psr/log": "~1.0",
-    "symfony/config": "~2.7 | ~3.0 | ~4.0",
-    "symfony/console": "~2.7 | ~3.0 | ~4.0",
-    "symfony/finder": "~2.8 | ~3.0 | ~4.0",
-    "symfony/dependency-injection": "~2.7 | ~3.0 | ~4.0",
-    "symfony/process": "~2.7 | ~3.0 | ~4.0",
-    "symfony/yaml": "~2.7 | ~3.0 | ~4.0"
-  },
-  "require-dev": {
-    "phpcq/all-tasks": "~1.2"
+    "php": "^7.3",
+    "ext-json": "*",
+    "psr/log": "^1.0",
+    "symfony/config": "^5.0",
+    "symfony/console": "^5.0",
+    "symfony/finder": "^5.0",
+    "symfony/dependency-injection": "^5.0",
+    "symfony/process": "^5.0",
+    "symfony/yaml": "^5.0"
   },
   "autoload": {
     "psr-4": {
@@ -28,7 +26,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0.x-dev"
+      "dev-master": "1.1.x-dev"
     }
   },
   "bin": ["bin/pharpiler"]
