--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,23 +1,25 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<phpunit
-  backupGlobals="false"
-  backupStaticAttributes="false"
-  colors="true"
-  convertErrorsToExceptions="true"
-  convertNoticesToExceptions="true"
-  convertWarningsToExceptions="true"
-  processIsolation="false"
-  stopOnFailure="false"
-  bootstrap="tests/bootstrap.php"
+<?xml version="1.0" encoding="utf-8"?>
+<!-- https://phpunit.de/manual/current/en/appendixes.configuration.html -->
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/9.0/phpunit.xsd"
+         colors="true"
+         forceCoversAnnotation="true"
+         failOnRisky="true"
+         failOnWarning="true"
+         beStrictAboutChangesToGlobalState="true"
+         beStrictAboutOutputDuringTests="true"
+         beStrictAboutResourceUsageDuringSmallTests="true"
+         beStrictAboutTodoAnnotatedTests="true"
+         bootstrap="vendor/autoload.php"
 >
   <testsuites>
     <testsuite name="pharpiler tests">
-      <directory>./tests/</directory>
+      <directory>./tests</directory>
     </testsuite>
   </testsuites>
   <filter>
     <whitelist>
-      <directory>./src/</directory>
+      <directory>./src</directory>
     </whitelist>
   </filter>
 </phpunit>
